--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@
 }
 
 .jumbotron {
-  background-image:url('http://www.phideltatheta.org/resources/brand/facebook_cover_3.jpg');
+  background-image:url('https://www.phideltatheta.org/resources/brand/facebook_cover_3.jpg');
   height: 500px;
   background-repeat: no-repeat;
   background-size: cover;
