--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@
 .jumbotron h1 {
   color: #fff;
   font-size: 48px;  
-  font-family: 'Shift', sans-serif;
+  font-family: 'https://s3.amazonaws.com/codecademy-content/courses/ltp/fonts/shift.woff', sans-serif;
   font-weight: bold;
   position: absolute;
   top: -100px;
@@ -45,7 +45,7 @@
 }
 
 .learn-more h3 {
-  font-family: 'Shift', sans-serif;
+  font-family: 'http://s3.amazonaws.com/codecademy-content/courses/ltp/fonts/shift.woff', sans-serif;
   font-size: 18px;
   font-weight: bold;
 }
