--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@
 }
 
 .jumbotron {
+  font-family: 'Dosis', sans-serif;
   background-image:url('https://www.phideltatheta.org/resources/brand/facebook_cover_3.jpg');
   height: 500px;
   background-repeat: no-repeat;
@@ -25,7 +26,7 @@
 .jumbotron h1 {
   color: #fff;
   font-size: 48px;  
-  font-family: 'https://s3.amazonaws.com/codecademy-content/courses/ltp/fonts/shift.woff', sans-serif;
+  font-family: 'Dosis', sans-serif;
   font-weight: bold;
   position: absolute;
   top: -100px;
@@ -68,4 +69,8 @@
     font-size: 15px;
     margin-bottom: 13px;
     }
+
+.contact {
+  text-align: center;
+}
     
