--- a/main.css
+++ b/main.css
@@ -1,3 +1,25 @@
+.centered {
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+}
+
+.left p, h1, h2, h3, h4{
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200
+}
+
+.blue{
+  background: #2c3e50;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.blue p, h1, h2, h3, h4{
+  color: white;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 200;
+}
+
 .nav a {
   color: #5a5a5a;
   font-size: 11px;
@@ -11,7 +33,6 @@
 }
 
 .jumbotron {
-  font-family: 'Dosis', sans-serif;
   background-image:url('https://www.phideltatheta.org/resources/brand/facebook_cover_3.jpg');
   height: 500px;
   background-repeat: no-repeat;
@@ -25,8 +46,9 @@
 
 .jumbotron h1 {
   color: #fff;
+  font-family: 'Raleway', sans-serif;
   font-size: 48px;  
-  font-family: 'Dosis', sans-serif;
+  font-weight: 200;
   font-weight: bold;
   position: absolute;
   top: -100px;
@@ -46,7 +68,7 @@
 }
 
 .learn-more h3 {
-  font-family: 'http://s3.amazonaws.com/codecademy-content/courses/ltp/fonts/shift.woff', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: bold;
 }
@@ -55,17 +77,17 @@
   color: #00b0ff;
 }
 
-.neighborhood-guides{
+.photos{
     background-color: #efefef;
     border-bottom: 1px solid #dbdbdb;
     }
     
-.neighborhood-guides h2{
+.photos h2{
     color: #393c3d;
     font-size: 24px;
     }
     
-.neighborhood-guides p{
+.photos p{
     font-size: 15px;
     margin-bottom: 13px;
     }
